<resources>
    <string name="app_name">SGO Connect</string>
    <string name="activity_main_menu_source_code">Исходный код</string>
    <string name="activity_main_menu_warning">READ ME</string>
    <string name="activity_main_menu_gen_token">Сгенерировать токен</string>
    <string name="dialog_instruction_gen_token_info">Генерация токена проходит в 2 этапа\n1. Авторизация в ЕСИА (Гос. Услуги)\n2. Вход в СГО и получения токена\n\nСЕРВИС ВЗАИМОДЕЙСТВУЕТ ИСКЛЮЧИТЕЛЬНО С СГО, ваши гос. услуги в полной безопасности, весь код открыт и распространяется по лицензии GNU GPL v3</string>
    <string name="dialog_instruction_gen_token_auth">Авторизоваться</string>
    <string name="dialog_instruction_gen_token_how_does_this_work">Как это работает?</string>
    <string name="dialog_warning_text">Не передавайте свой токен третьим лицам и непроверенным веб-ресурсам. Это может обернуться потерей доступа к СГО</string>
    <string name="dialog_warning_btn_ok">ОК</string>
    <string name="github_url">https://github.com/PurrfectLab/SGO_Connect</string>
    <string name="github_button_how_does_this_work_url">https://github.com/PurrfectLab/SGO_Connect/wiki/%D0%90%D0%B2%D1%82%D0%BE%D1%80%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F-%D1%87%D0%B5%D1%80%D0%B5%D0%B7-%D0%B3%D0%BE%D1%81%D1%83%D1%81%D0%BB%D1%83%D0%B3%D0%B8</string>
    <string name="region_url">https://sgo.edu-74.ru/</string>
    <string name="server_url">http://5.206.35.168:5000/</string>
    <string name="select_user">Выберите пользователя</string>
    <string name="our_token">Ваш токен</string>
    <string name="copy_token">Скопировать токен</string>
    <string name="token_copied">Токен скопирован!</string>
</resources>