<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/instruction_gen_token_dialog_size_width"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/rounded_16"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_info"
        android:layout_marginBottom="16dp"
        app:tint="@color/btn_gen_token_main_menu"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_instruction_gen_token_info"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_btn_2"
        android:textColor="@color/text_color"
        android:text="@string/dialog_instruction_gen_token_auth" />

    <Button
        android:id="@+id/buttonHowDoesThisWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_btn_2"
        android:textColor="@color/text_color"
        android:text="@string/dialog_instruction_gen_token_how_does_this_work" />

</LinearLayout>