<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="350dp">

        <LinearLayout
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="8dp">

            <ImageButton
                android:id="@+id/githubButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_ripple"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_github_logo"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_main_menu_source_code"
                android:textColor="@color/text_color"
                android:layout_marginTop="9dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="8dp">

            <ImageButton
                android:id="@+id/tokenButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_ripple"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_token"
                app:tint="@color/btn_gen_token_main_menu"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_main_menu_gen_token"
                android:textColor="@color/text_color"
                android:layout_marginTop="9dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/warningButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_ripple"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_warning"
                app:tint="@color/btn_warning_main_menu"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_main_menu_warning"
                android:textColor="@color/text_color"
                android:layout_marginTop="9dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
